--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
-title: "GeoRecap"
-description: "Recap di Geopolitica"
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme
